--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,12 +1,19 @@
+/* header */
+
 .header_lis {
-    color: red;
-    font-size: 18px;
-    cursor: pointer;
-    font-weight: 1000;
-    text-decoration: none;
+  color: green;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: 900;
+  text-decoration: none;
 }
 
 /* a */
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+/* button  */
+button {
+    cursor: pointer;
 }
